@@ -1,14 +1,12 @@
 package org.skyve.impl.web.faces.components;
 
 import java.io.IOException;
-import java.util.Locale;
 
 import javax.faces.component.FacesComponent;
 import javax.faces.component.UIComponent;
 import javax.faces.component.html.HtmlPanelGroup;
 import javax.faces.context.FacesContext;
 
-import org.skyve.CORE;
 import org.skyve.impl.metadata.view.widget.MapDisplay;
 import org.skyve.impl.util.UtilImpl;
 import org.skyve.impl.web.faces.FacesAction;
@@ -16,7 +14,6 @@ import org.skyve.impl.web.faces.FacesUtil;
 import org.skyve.impl.web.faces.pipeline.component.ComponentBuilder;
 import org.skyve.impl.web.faces.pipeline.component.ComponentRenderer;
 import org.skyve.impl.web.faces.pipeline.component.SkyveComponentBuilderChain;
-import org.skyve.metadata.user.User;
 import org.skyve.util.Util;
 import org.skyve.web.UserAgentType;
 
@@ -39,7 +36,7 @@ public class Map extends HtmlPanelGroup {
 			ComponentBuilder tempComponentBuilder = null;
 			try {
 				tempComponentBuilder = (classString != null) ?
-										(ComponentBuilder) Class.forName(classString).newInstance() :
+										(ComponentBuilder) Class.forName(classString).getConstructor().newInstance() :
 										new SkyveComponentBuilderChain();
 			}
 			catch (Exception e) {
@@ -55,8 +52,6 @@ public class Map extends HtmlPanelGroup {
 
 					componentBuilder.setManagedBeanName(managedBeanName);
 			    	componentBuilder.setUserAgentType(userAgentType);
-			    	User user = CORE.getUser();
-			    	componentBuilder.setLocale((user == null) ? Locale.ENGLISH : user.getLocale());
 
 			    	Map.this.getChildren().add(generate(moduleName,
 															queryName,
